@@ -5,6 +5,7 @@ Post-release
 Add Sabado.pt
 Fix Australia News Corp (amp-fix)
 Fix Cmjornal.pt & Record.pt (amp)
+Fix Grupo Abril (js-inline)
 Fix Telegraaf.nl (columns)
 
 * v3.2.4.0 (2023-07-09)
